# aws_automate_py

./: README.md  main.py  pyproject.toml  test.py
