[tool.poetry]
name = "project1"
version = "0.1.0"
description = "Project to automate AWS using Python"
authors = ["Alex Rtveliashvili"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
botocore = "^1.29.99"
python-dotenv = "^1.0.0"
load-dotenv = "^0.1.0"
python-magic = "^0.4.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
